--- a/urlshortner/requirements.txt
+++ b/urlshortner/requirements.txt
@@ -37,6 +37,7 @@ pexpect==4.2.1
 pickleshare==0.7.4
 prompt-toolkit==1.0.15
 ptyprocess==0.5.2
+pygeoip==0.3.2
 Pygments==2.2.0
 pyparsing==2.2.0
 python-dateutil==2.6.1
@@ -48,6 +49,7 @@ qtconsole==4.3.1
 requests==2.18.4
 requests-file==1.4.2
 scikit-learn==0.19.0
+scipy==0.19.1
 simplegeneric==0.8.1
 six==1.11.0
 terminado==0.6
